--- a/BUILD.gn
+++ b/BUILD.gn
@@ -77,9 +77,6 @@ declare_args() {
   # Sets the number of internal fields on array buffer view objects.
   v8_array_buffer_view_internal_field_count = 0
 
-  # Sets -DENABLE_GDB_JIT_INTERFACE.
-  v8_enable_gdbjit = ""
-
   # Sets -DENABLE_VTUNE_JIT_INTERFACE.
   v8_enable_vtunejit = false
 
@@ -280,9 +277,11 @@ declare_args() {
   # Controls the threshold for on-heap/off-heap Typed Arrays.
   v8_typed_array_max_size_in_heap = 64
 
-  v8_enable_gdbjit = ((v8_current_cpu == "x86" || v8_current_cpu == "x64") &&
-                      (is_linux || is_chromeos || is_mac)) ||
-                     (v8_current_cpu == "ppc64" && (is_linux || is_chromeos))
+  # Sets -DENABLE_GDB_JIT_INTERFACE.
+  v8_enable_gdbjit =
+      is_debug && (((v8_current_cpu == "x86" || v8_current_cpu == "x64") &&
+                    (is_linux || is_chromeos || is_mac)) ||
+                   (v8_current_cpu == "ppc64" && (is_linux || is_chromeos)))
 
   # Check that each header can be included in isolation (requires also
   # setting the "check_v8_header_includes" gclient variable to run a
@@ -494,7 +493,8 @@ declare_args() {
 
 # Derived defaults.
 if (cppgc_enable_verify_heap == "") {
-  cppgc_enable_verify_heap = v8_enable_verification_features || v8_dcheck_always_on
+  cppgc_enable_verify_heap =
+      v8_enable_verification_features || v8_dcheck_always_on
 }
 if (v8_enable_verify_heap == "") {
   v8_enable_verify_heap = v8_enable_verification_features
@@ -517,7 +517,8 @@ if (v8_enable_trace_maps == "") {
   v8_enable_trace_maps = v8_enable_debugging_features
 }
 if (v8_enable_test_features == "") {
-  v8_enable_test_features = v8_enable_verification_features || v8_dcheck_always_on
+  v8_enable_test_features =
+      v8_enable_verification_features || v8_dcheck_always_on
 }
 if (v8_enable_v8_checks == "") {
   v8_enable_v8_checks = v8_enable_verification_features
