[turboshaft] Use new call descriptor format for runtime calls
Bug: 348031042
Change-Id: I1b87db1f9d3da93bf7594aa7a4d21104ddff95d5
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7067913
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Auto-Submit: Nico Hartmann <nicohartmann@chromium.org>
Commit-Queue: Matthias Liedtke <mliedtke@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103285}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3451,6 +3451,7 @@ filegroup(
         "src/compiler/turboshaft/build-graph-phase.h",
         "src/compiler/turboshaft/builtin-call-descriptors.h",
         "src/compiler/turboshaft/builtin-compiler.h",
+        "src/compiler/turboshaft/call-descriptors-util.h",
         "src/compiler/turboshaft/csa-branch-elimination-phase.cc",
         "src/compiler/turboshaft/csa-branch-elimination-phase.h",
         "src/compiler/turboshaft/csa-early-machine-optimization-phase.cc",
