[loong64][turboshaft][isel] Fix branch-if-overflow fusion
Port commit abcbdb7b41b6352b00510e6db7c2c66bce4067c2
Port commit 98dd7a812557e650c48a593dba3a4b34bf98a2ea

Change-Id: Idd6c8564ad52ce68166b66f1e20a5334487dedd5
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7099723
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Commit-Queue: Liu Yu <liuyu@loongson.cn>
Reviewed-by: Zhao Jiazhong <zhaojiazhong-hf@loongson.cn>
Cr-Commit-Position: refs/heads/main@{#103420}

--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -712,6 +712,11 @@ v8_source_set("v8_unittests_sources") {
       "assembler/disasm-mips64-unittest.cc",
       "assembler/macro-assembler-mips64-unittest.cc",
     ]
+    if (v8_enable_turbofan) {
+      sources += [
+        "compiler/mips64/turboshaft-instruction-selector-mips64-unittest.cc",
+      ]
+    }
   } else if (v8_current_cpu == "riscv64") {
     sources += [
       "assembler/disasm-riscv-unittest.cc",
@@ -769,6 +774,11 @@ v8_source_set("v8_unittests_sources") {
       "assembler/disasm-loong64-unittest.cc",
       "assembler/macro-assembler-loong64-unittest.cc",
     ]
+    if (v8_enable_turbofan) {
+      sources += [
+        "compiler/loong64/turboshaft-instruction-selector-loong64-unittest.cc",
+      ]
+    }
     if (v8_enable_webassembly && current_cpu == "loong64") {
       sources += [ "wasm/trap-handler-native-unittest.cc" ]
     }
