[perfetto] Add V8_USE_PERFETTO_SDK build flag
Add a build time flag to use Perfetto SDK header `perfetto.h`.

Refs: https://github.com/nodejs/diagnostics/issues/654
Bug: 457135433
Change-Id: Ifefa3687d7bd7b1f1af78a681bb48ded39f84f57
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7111260
Reviewed-by: Camillo Bruni <cbruni@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Chengzhong Wu <cwu631@bloomberg.net>
Cr-Commit-Position: refs/heads/main@{#103565}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2583,6 +2583,7 @@ filegroup(
         "src/tasks/task-utils.cc",
         "src/tasks/task-utils.h",
         "src/torque/runtime-macro-shims.h",
+        "src/tracing/perfetto-sdk.h",
         "src/tracing/trace-event.cc",
         "src/tracing/trace-event.h",
         "src/tracing/trace-event-no-perfetto.h",
