--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -80,6 +80,9 @@ declare_args() {
   # Implement tracing using Perfetto (https://perfetto.dev).
   v8_use_perfetto = false
 
+  # Use Perfetto SDK headers.
+  v8_use_perfetto_sdk = false
+
   # Override global symbol level setting for v8.
   v8_symbol_level = symbol_level
 
@@ -267,6 +270,11 @@ if (v8_use_external_startup_data == "") {
 
 if (v8_enable_backtrace == "") {
   v8_enable_backtrace = is_debug && !v8_optimized_debug
+}
+
+if (v8_use_perfetto_sdk) {
+  # When using perfetto SDK, we also need to enable perfetto support.
+  v8_use_perfetto = true
 }
 
 # Chromium is configured to use the perfetto client library, v8 should also
