[dumpling] basic ignition dumping
This CL adds basic support for dumping acc register at all possible
bytecode offsets.

The feature is protected by V8_DUMPLING build flag and
interpreter_dumping runtime flag. If Fuzzilli runs in non-Dumpling mode,
we just exit early from the TraceExecutionFrame function. If we run in
non-Fuzzilli mode, code responsible for dumping will not be part of the
executable.

This is the first CL in the series and there will be many more, which
will: 1) add support for different compiler tiers 2) add support for
dumping more data than just accumulator register. 3) add support for
printing objects in a more detailed format (e.g. JSArrays) 4) ...

Bug: 441467877
Change-Id: Ie4f91c54614efb8211184e0174eef7cb999d3251
Co-authored-by: Mathias Payer <mathias.payer@gmail.com>
Co-authored-by: Liam Wachter <liam.g.wachter@gmail.com>
Co-authored-by: Flavio Toffalini<flavio87@gmail.com>
Co-authored-by: Christian Wressnegger <intellisec.de@gmail.com>
Co-authored-by: Julian Gremminger <asdfju77@gmail.com>
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7095725
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Danylo Mocherniuk <mdanylo@google.com>
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103589}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -489,6 +489,9 @@ declare_args() {
 
   # Use a hard-coded secret value when hashing.
   v8_use_default_hasher_secret = true
+
+  # add instrumentation for Dumpling differential fuzzing
+  v8_dumpling = true
 }
 
 # Derived defaults.
@@ -1329,6 +1332,9 @@ config("features") {
   }
   if (v8_fuzzilli) {
     defines += [ "V8_FUZZILLI" ]
+  }
+  if (v8_dumpling) {
+    defines += [ "V8_DUMPLING" ]
   }
   if (v8_enable_fuzztest) {
     defines += [ "V8_ENABLE_FUZZTEST" ]
@@ -6495,6 +6501,15 @@ v8_source_set("v8_base_without_compiler") {
       "src/fuzzilli/cov.h",
       "src/fuzzilli/fuzzilli.cc",
       "src/fuzzilli/fuzzilli.h",
+    ]
+  }
+
+  if (v8_dumpling) {
+    sources += [
+      "src/dumpling/dumpling-manager.cc",
+      "src/dumpling/dumpling-manager.h",
+      "src/dumpling/object-dumping.cc",
+      "src/dumpling/object-dumping.h",
     ]
   }
 
