[dumpling] Disable by default
Dumpling enablement regressed JetStream2 First-Score by 2%.

Bug: 441467877
Change-Id: I6a54ea08d0e1d03fed3f8819c599672187573b21
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7131800
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Danylo Mocherniuk <mdanylo@chromium.org>
Commit-Queue: Danylo Mocherniuk <mdanylo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103606}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -491,7 +491,7 @@ declare_args() {
   v8_use_default_hasher_secret = true
 
   # add instrumentation for Dumpling differential fuzzing
-  v8_dumpling = true
+  v8_dumpling = false
 }
 
 # Derived defaults.
