[fuzzilli] Enable undefined_double for fuzzing
Bug: 455552692
Change-Id: If8a710ae76074967d49cace421a994773764943b
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7151021
Reviewed-by: Nico Hartmann <nicohartmann@chromium.org>
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Commit-Queue: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103704}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -457,7 +457,8 @@ declare_args() {
   v8_enable_experimental_tsa_builtins = false
 
   # Use the encoding of undefined in double values.
-  v8_enable_undefined_double = false
+  # Only enabled for fuzzing in V8 Fuzzilli builds
+  v8_enable_undefined_double = v8_fuzzilli
 
   v8_dcheck_always_on = dcheck_always_on
 
