[bazel] Add sanitizers config settings
This ports to bazel this config GN cl:
https://chromium-review.googlesource.com/c/v8/v8/+/6966641

Change-Id: Iffa492f9e0e2a88ae3674588a2007d1c3da63eb0
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7157680
Reviewed-by: Andreas Haas <ahaas@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103751}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -522,6 +522,18 @@ v8_config(
             "V8_ENABLE_CHECKS",
         ],
         "//conditions:default": [],
+    }) + select({
+        "@v8//bazel/config:asan_enabled" : [ "V8_USE_ADDRESS_SANITIZER" ],
+        "//conditions:default": [],
+    }) + select({
+        "@v8//bazel/config:hwasan_enabled" : [ "V8_USE_HWADDRESS_SANITIZER" ],
+        "//conditions:default": [],
+    }) + select({
+        "@v8//bazel/config:msan_enabled" : [ "V8_USE_MEMORY_SANITIZER" ],
+        "//conditions:default": [],
+    }) + select({
+        "@v8//bazel/config:ubsan_enabled" : [ "V8_USE_UNDEFINED_BEHAVIOR_SANITIZER" ],
+        "//conditions:default": [],
     }) + select(
         {
             "@v8//bazel/config:v8_target_ia32": ["V8_TARGET_ARCH_IA32"],
