[maglev] Add range verification pass
Bug: 447172725
Change-Id: Ib23b0d94795f56ffc5b5e7da56069ff11bbd4a87
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7170030
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Commit-Queue: Darius Mercadier <dmercadier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103817}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2937,6 +2937,7 @@ filegroup(
             "src/maglev/maglev-pre-regalloc-codegen-processors.h",
             "src/maglev/maglev-range.h",
             "src/maglev/maglev-range-analysis.h",
+            "src/maglev/maglev-range-verification.h",
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-regalloc-data.h",
@@ -2963,6 +2964,7 @@ filegroup(
             "src/maglev/maglev-phi-representation-selector.cc",
             "src/maglev/maglev-truncation.cc",
             "src/maglev/maglev-pipeline-statistics.cc",
+            "src/maglev/maglev-range-verification.cc",
             "src/maglev/maglev-regalloc.cc",
             "src/maglev/maglev.cc",
         ],
@@ -3752,6 +3754,8 @@ filegroup(
             "src/maglev/maglev-kna-processor.h",
             "src/maglev/maglev-range.h",
             "src/maglev/maglev-range-analysis.h",
+            "src/maglev/maglev-range-verification.cc",
+            "src/maglev/maglev-range-verification.h",
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-register-frame-array.h",
