--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3517,6 +3517,7 @@ filegroup(
         "src/compiler/turboshaft/late-load-elimination-reducer.h",
         "src/compiler/turboshaft/layered-hash-map.h",
         "src/compiler/turboshaft/load-store-simplification-reducer.h",
+        "src/compiler/turboshaft/load-store-verification-reducer.h",
         "src/compiler/turboshaft/loop-finder.cc",
         "src/compiler/turboshaft/loop-finder.h",
         "src/compiler/turboshaft/loop-peeling-phase.cc",
