--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1188,8 +1188,7 @@ config("features") {
   if (v8_enable_pointer_compression) {
     if (v8_enable_pointer_compression_shared_cage) {
       defines += [
-        # TODO(442942399): Re-enable after bug has been addressed.
-        # "V8_CONTIGUOUS_COMPRESSED_RO_SPACE",
+        "V8_CONTIGUOUS_COMPRESSED_RO_SPACE",
         "V8_CONTIGUOUS_COMPRESSED_RO_SPACE_SIZE_MB=${v8_contiguous_compressed_ro_space_size_mb}",
       ]
     } else {
