--- a/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
+++ b/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
@@ -59,6 +59,7 @@
     {"app_args": "--turbo-stress-instruction-scheduling", "app_name": "d8", "probability": 0.1},
     {"app_args": "--turboshaft-verify-load-elimination", "app_name": "d8", "probability": 0.2},
     {"app_args": "--turboshaft-verify-load-store-taggedness", "app_name": "d8", "probability": 0.2},
+    {"app_args": "--turboshaft-verify-reductions", "app_name": "d8", "probability": 0.1},
     {"app_args": "--stress-wasm-code-gc", "app_name": "d8", "probability": 0.1},
     {"app_args": "--lazy", "app_name": "d8", "probability": 0.1},
     {"app_args": "--no-stress-lazy-source-positions", "app_name": "d8", "probability": 0.1},
