[utils] Move float16.h to utils directory
Relocate the Float16 helper class from src/wasm to src/base to better
reflect its general-purpose utility beyond WebAssembly-specific usage.

Change-Id: I816d9c82c5052269c6ccfca0eeb95c33cf51e1b8
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7183198
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Daniel Lehmann <dlehmann@chromium.org>
Auto-Submit: Yahan Lu (LuYahan) <yahan@iscas.ac.cn>
Commit-Queue: Yahan Lu (LuYahan) <yahan@iscas.ac.cn>
Cr-Commit-Position: refs/heads/main@{#103924}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -837,6 +837,7 @@ filegroup(
         "src/base/file-utils.cc",
         "src/base/file-utils.h",
         "src/base/flags.h",
+        "src/base/float16.h",
         "src/base/fpu.cc",
         "src/base/fpu.h",
         "src/base/functional/bind-internal.h",
@@ -3047,7 +3048,6 @@ filegroup(
             "src/wasm/constant-expression-interface.cc",
             "src/wasm/constant-expression-interface.h",
             "src/wasm/decoder.h",
-            "src/wasm/float16.h",
             "src/wasm/function-body-decoder.cc",
             "src/wasm/function-body-decoder.h",
             "src/wasm/function-body-decoder-impl.h",
