--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4637,7 +4637,6 @@ v8_header_set("v8_internal_headers") {
       "src/wasm/constant-expression-interface.h",
       "src/wasm/constant-expression.h",
       "src/wasm/decoder.h",
-      "src/wasm/float16.h",
       "src/wasm/function-body-decoder-impl.h",
       "src/wasm/function-body-decoder.h",
       "src/wasm/function-compiler.h",
@@ -6773,6 +6772,7 @@ v8_component("v8_libbase") {
     "src/base/file-utils.cc",
     "src/base/file-utils.h",
     "src/base/flags.h",
+    "src/base/float16.h",
     "src/base/fpu.cc",
     "src/base/fpu.h",
     "src/base/free_deleter.h",
