[interpreter] Add flag --proto-assign-seq-opt-count
This allows testing different thresholds for the optimization as well
as stress-testing the new code by also replacing single prototype
assignments with the new bytecode.

Bug: 429332174
Change-Id: Idcc6a1e99da7e193c4b3d08e4a24b07f18e7ca24
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7178541
Commit-Queue: Matthias Liedtke <mliedtke@chromium.org>
Reviewed-by: Raphael Herouart <rherouart@chromium.org>
Auto-Submit: Matthias Liedtke <mliedtke@chromium.org>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103892}

--- a/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
+++ b/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
@@ -72,5 +72,6 @@
     {"app_args": "--experimental-wasm-revectorize", "app_name": "d8", "probability": 0.25},
     {"app_args": "--no-memory-pool", "app_name": "d8", "probability": 0.1},
     {"app_args": "--proto-assign-seq-opt", "app_name": "d8", "probability": 0.5},
+    {"app_args": "--proto-assign-seq-opt --proto-assign-seq-opt-count=1", "app_name": "d8", "probability": 0.1},
     {"app_args": "--scavenger-chaos-mode", "app_name": "d8", "probability": 0.1}
 ]
