[riscv] Error on riscv32 compilation unless 'V8_RISCV_ENABLE_DEPRECATED_RISCV32' is given
At the same time add a BUILD.gn variable `v8_riscv_enable_deprecated_riscv32`.

Change-Id: Ie988c25cf84484315a5811da27c8d3de9d867ff5
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7184740
Reviewed-by: Kasper Lund <kasperl@rivosinc.com>
Commit-Queue: Florian Loitsch <floitsch@rivosinc.com>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103906}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -493,6 +493,9 @@ declare_args() {
 
   # add instrumentation for Dumpling differential fuzzing
   v8_dumpling = false
+
+  # Enable compilation of riscv32.
+  v8_riscv_enable_deprecated_riscv32 = false
 }
 
 # Derived defaults.
@@ -1339,6 +1342,9 @@ config("features") {
   }
   if (v8_dumpling) {
     defines += [ "V8_DUMPLING" ]
+  }
+  if (v8_riscv_enable_deprecated_riscv32) {
+    defines += [ "V8_RISCV_ENABLE_DEPRECATED_RISCV32" ]
   }
   if (v8_enable_fuzztest) {
     defines += [ "V8_ENABLE_FUZZTEST" ]
