[tagged] Introduce TrustedPointerMember
This helper class simplifies defining trusted pointer members in
HeapObjectLayout subclasses.

Bug: 42202654
Change-Id: I505f9f70a0128899d13a464eda15026f5a435cc0
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7181920
Reviewed-by: Samuel Groß <saelo@chromium.org>
Auto-Submit: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Igor Sheludko <ishell@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103897}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2214,6 +2214,8 @@ filegroup(
         "src/objects/hole.h",
         "src/objects/trusted-object.h",
         "src/objects/trusted-object-inl.h",
+        "src/objects/trusted-pointer.h",
+        "src/objects/trusted-pointer-inl.h",
         "src/objects/option-utils.cc",
         "src/objects/option-utils.h",
         "src/objects/ordered-hash-table.cc",
