[wasm][compilation-hints] Write compilation hints to stdout and file
We generate the compilation-hints sections from a module, based on
collected feedback, behind a couple of new flags. Namely:
- We generate the compilation-priority section based on whether a
  function was compiled and/or marked for tierup. We always generate
  a 0 compilation priority if the function was compiled, and a 0
  optimization priority if it was also marked for tierup. Note that we
  do not actually tier up in this configuration.
- We generate the instruction-frequencies and call-targets sections
  based on collected liftoff feedback.
The flag `--wasm-generate-compilation-hints` writes a proper wasm
module to a file, containing only the new sections. The flag
`--trace-wasm-generate-compilation-hints` emits a textual
representation of these sections to stdout.

Bug: 405952385
Change-Id: Ibb89123966c4ed3ced77fcefd028f535495f2b30
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7157372
Reviewed-by: Jakob Kummerow <jkummerow@chromium.org>
Commit-Queue: Manos Koukoutos <manoskouk@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103947}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3043,6 +3043,8 @@ filegroup(
             "src/wasm/code-space-access.h",
             "src/wasm/compilation-environment.h",
             "src/wasm/compilation-environment-inl.h",
+            "src/wasm/compilation-hints-generation.cc",
+            "src/wasm/compilation-hints-generation.h",
             "src/wasm/constant-expression.cc",
             "src/wasm/constant-expression.h",
             "src/wasm/constant-expression-interface.cc",
