--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4634,6 +4634,7 @@ v8_header_set("v8_internal_headers") {
       "src/wasm/code-space-access.h",
       "src/wasm/compilation-environment-inl.h",
       "src/wasm/compilation-environment.h",
+      "src/wasm/compilation-hints-generation.h",
       "src/wasm/constant-expression-interface.h",
       "src/wasm/constant-expression.h",
       "src/wasm/decoder.h",
@@ -6144,6 +6145,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/wasm/basic-block-calculator.cc",
       "src/wasm/canonical-types.cc",
       "src/wasm/code-space-access.cc",
+      "src/wasm/compilation-hints-generation.cc",
       "src/wasm/constant-expression-interface.cc",
       "src/wasm/constant-expression.cc",
       "src/wasm/function-body-decoder.cc",
