--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -613,6 +613,7 @@ v8_source_set("v8_unittests_sources") {
       "compiler/wasm-address-reassociation-unittest.cc",
       "objects/wasm-backing-store-unittest.cc",
       "wasm/basic-block-calculator-unittest.cc",
+      "wasm/compilation-hints-unittest.cc",
       "wasm/decoder-unittest.cc",
       "wasm/function-body-decoder-unittest.cc",
       "wasm/leb-helper-unittest.cc",
