Move MemCopy and friends to base
The methods don't depend on any VM-internal types. This also allows
reusing them in base itself.

Change-Id: I5ce45f0f05ada202ef94eb567e5b6d94316cc46f
Bug: 448409803
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7201213
Reviewed-by: Patrick Thier <pthier@chromium.org>
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#103951}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -855,6 +855,8 @@ filegroup(
         "src/base/logging.cc",
         "src/base/logging.h",
         "src/base/macros.h",
+        "src/base/memcopy.cc",
+        "src/base/memcopy.h",
         "src/base/memory.h",
         "src/base/numbers/bignum.cc",
         "src/base/numbers/bignum.h",
