--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -469,6 +469,7 @@ v8_source_set("v8_unittests_sources") {
     "sandbox/pointer-table-unittest.cc",
     "sandbox/sandbox-hardware-support-unittest.cc",
     "sandbox/sandbox-unittest.cc",
+    "sandbox/sandbox-violation-unittest.cc",
     "strings/char-predicates-unittest.cc",
     "strings/unicode-unittest.cc",
     "tasks/background-compile-task-unittest.cc",
