--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6746,6 +6746,7 @@ v8_component("v8_libbase") {
     "src/base/abort-mode.cc",
     "src/base/abort-mode.h",
     "src/base/address-region.h",
+    "src/base/algorithm.h",
     "src/base/atomic-utils.h",
     "src/base/atomicops.h",
     "src/base/base-export.h",
