[codegen] Remove IsolateAddressId in favour of IsolateFieldId
This CL
 - moves ISOLATE_DATA_FIELDS macro list to new header file
   isolate-data-fields.h in order to avoid include cycles,
 - introduces ISOLATE_DATA_SUBFIELDS macro list for data stored inside
   complex objects in IsolateData,
 - adds missing IsolateFieldId enums for commonly used IsolateData
   fields,
 - migrates accesses to IsolateData fields from
     ExternalReferenceAsOperand(
         ExternalReference::Create(IsolateAddressId::kFoo, isolate))
   to simple and isolate independent
     AsMemOperand(IsolateFieldId)
   in x64/ia32/arm64/arm macro assembler and builtins,
 - removes IsolateAddressId enum.

No functional change expected except that it's no longer necessary
to compute address of IsolateAddressId field and only then load/store
the value - now it can be done with a single instruction.

Bug: 349952800
Bug: 326505377, 455600234
Change-Id: I37332f74a597acafac4de1dafa5c4391287f1db3
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7213271
Reviewed-by: Patrick Thier <pthier@chromium.org>
Commit-Queue: Igor Sheludko <ishell@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104034}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1639,6 +1639,7 @@ filegroup(
         "src/execution/isolate.cc",
         "src/execution/isolate.h",
         "src/execution/isolate-data.h",
+        "src/execution/isolate-data-fields.h",
         "src/execution/isolate-inl.h",
         "src/execution/isolate-utils.h",
         "src/execution/isolate-utils-inl.h",
