--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -466,6 +466,7 @@ v8_source_set("v8_unittests_sources") {
     "regress/regress-crbug-938251-unittest.cc",
     "run-all-unittests.cc",
     "runtime/runtime-debug-unittest.cc",
+    "sandbox/bytecode-verifier-unittest.cc",
     "sandbox/pointer-table-unittest.cc",
     "sandbox/sandbox-hardware-support-unittest.cc",
     "sandbox/sandbox-unittest.cc",
