[temporal] enable v8_enable_temporal_support on ppc64 and s390x
Change-Id: Iaa5f46913b6aabf00b0440dba3d524427667b06e
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7216074
Reviewed-by: Manish Goregaokar <manishearth@google.com>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Commit-Queue: Manish Goregaokar <manishearth@google.com>
Cr-Commit-Position: refs/heads/main@{#104066}

--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -61,8 +61,7 @@ declare_args() {
   # is still not accessible unless --harmony-temporal is enabled at runtime)
   #
   # Furthermore, some architectures don't have Rust toolchains in Chromium
-  v8_enable_temporal_support = !(defined(build_with_node) && build_with_node) &&
-                               target_cpu != "ppc64" && target_cpu != "s390x"
+  v8_enable_temporal_support = !(defined(build_with_node) && build_with_node)
 
   # Use static libraries instead of source_sets.
   v8_static_library = false
