[build] Make rust inclusion conditional
It's only needed when temporal is supported, so it should also only
then get included. Currently it doesn't support Linux arm32
compilation (for fuzzing), where we switch temporal off.

Bug: 465655492
Change-Id: I39831d2875b5837b888c0f7441a61b4ede818123
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7224791
Auto-Submit: Michael Achenbach <machenbach@chromium.org>
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Commit-Queue: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104101}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -9,7 +9,6 @@ import("//build/config/dcheck_always_on.gni")
 import("//build/config/host_byteorder.gni")
 import("//build/config/mips.gni")
 import("//build/config/riscv.gni")
-import("//build/config/rust.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 import("//build_overrides/build.gni")
 import("//third_party/icu/config.gni")
@@ -19,6 +18,10 @@ import("gni/v8.gni")
 
 if (is_clang) {
   import("//build/config/clang/clang.gni")
+}
+
+if (v8_enable_temporal_support) {
+  import("//build/config/rust.gni")
 }
 
 if (is_ios) {
