[wasm] Templatize import wrapper cache
In preparation for introducing a new cache for stack wrappers, add a
base wrapper cache class templatized on the cache key, and make the
import wrapper cache derive from it.

R=jkummerow@chromium.org

Bug: 388533754
Change-Id: Ib0d4499226b1e98d026028a66aaf3746af4c3091
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7208910
Reviewed-by: Jakob Kummerow <jkummerow@chromium.org>
Commit-Queue: Thibaud Michaud <thibaudm@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104123}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3119,7 +3119,9 @@ filegroup(
             "src/wasm/wasm-features.cc",
             "src/wasm/wasm-features.h",
             "src/wasm/wasm-import-wrapper-cache.cc",
+            "src/wasm/wasm-wrapper-cache.cc",
             "src/wasm/wasm-import-wrapper-cache.h",
+            "src/wasm/wasm-wrapper-cache.h",
             "src/wasm/wasm-init-expr.h",
             "src/wasm/wasm-js.cc",
             "src/wasm/wasm-js.h",
@@ -3151,6 +3153,7 @@ filegroup(
             "src/wasm/wrappers.cc",
             "src/wasm/wrappers.h",
             "src/wasm/wrappers-inl.h",
+            "src/wasm/wasm-wrapper-cache-inl.h",
             "third_party/utf8-decoder/generalized-utf8-decoder.h",
         ],
         "//conditions:default": [],
