[wasmfx] Introduce stack wrapper cache
Introduce a new wrapper cache class for stack wrappers, deriving from
WasmWrapperCache.

R=jkummerow@chromium.org

Bug: 388533754
Change-Id: I99d120504a31e56e7e4f3fd4225a451c095c0645
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7210774
Reviewed-by: Jakob Kummerow <jkummerow@chromium.org>
Reviewed-by: Nikolaos Papaspyrou <nikolaos@chromium.org>
Commit-Queue: Thibaud Michaud <thibaudm@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104150}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3119,8 +3119,10 @@ filegroup(
             "src/wasm/wasm-features.cc",
             "src/wasm/wasm-features.h",
             "src/wasm/wasm-import-wrapper-cache.cc",
+            "src/wasm/wasm-stack-wrapper-cache.cc",
             "src/wasm/wasm-wrapper-cache.cc",
             "src/wasm/wasm-import-wrapper-cache.h",
+            "src/wasm/wasm-stack-wrapper-cache.h",
             "src/wasm/wasm-wrapper-cache.h",
             "src/wasm/wasm-init-expr.h",
             "src/wasm/wasm-js.cc",
