--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4697,6 +4697,7 @@ v8_header_set("v8_internal_headers") {
       "src/wasm/wasm-opcodes.h",
       "src/wasm/wasm-result.h",
       "src/wasm/wasm-serialization.h",
+      "src/wasm/wasm-stack-wrapper-cache.h",
       "src/wasm/wasm-subtyping.h",
       "src/wasm/wasm-tier.h",
       "src/wasm/wasm-tracing.h",
@@ -6187,6 +6188,7 @@ v8_source_set("v8_base_without_compiler") {
       "src/wasm/wasm-opcodes.cc",
       "src/wasm/wasm-result.cc",
       "src/wasm/wasm-serialization.cc",
+      "src/wasm/wasm-stack-wrapper-cache.cc",
       "src/wasm/wasm-subtyping.cc",
       "src/wasm/wasm-tracing.cc",
       "src/wasm/wasm-wrapper-cache.cc",
